syntax = "proto3";
package sifnode.margin.v1;

import "gogoproto/gogo.proto";
import "sifnode/margin/v1/types.proto";

option go_package = "github.com/Sifchain/sifnode/x/margin/types";

service Msg {
  rpc Open(MsgOpen) returns (MsgOpenResponse) {}
  rpc Close(MsgClose) returns (MsgCloseResponse) {}
  rpc ForceClose(MsgForceClose) returns (MsgForceCloseResponse) {}
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse) {}
  rpc UpdatePools(MsgUpdatePools) returns (MsgUpdatePoolsResponse) {}
}

message MsgOpen {
  string signer = 1;
  string collateral_asset = 2;
  string collateral_amount = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  string borrow_asset = 4;
  Position position = 5;
}

message MsgOpenResponse {}

message MsgClose {
  string signer = 1;
  uint64 id = 2;
}

message MsgCloseResponse {}

message MsgForceClose {
  string signer = 1;
  string mtp_address = 2;
  uint64 id = 3;
}

message MsgForceCloseResponse {}

message MsgUpdateParams {
  string signer = 1;
  Params params = 2;
}

message MsgUpdateParamsResponse {}

message MsgUpdatePools {
  string signer = 1;
  repeated string pools = 2;
}

message MsgUpdatePoolsResponse {}